atualiza dados GUSIMPORTS

--- a/index.html
+++ b/index.html
@@ -1,53 +1,52 @@
 <!doctype html>
-
 <html lang="pt-BR">
-
 <head>
-
   <meta charset="utf-8" />
-
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="theme-color" content="#1f6feb" />
+  <meta name="theme-color" content="#0ea5e9" />
 
-  <title>Nome da Loja ? Endereço</title>
+  <title>GUSIMPORTS LTDA - Assistência Técnica de Celulares em Campinas</title>
+  <meta name="description" content="Assistência técnica especializada em celulares em Campinas. Manutenção, reparo e venda de aparelhos com qualidade e confiança." />
 
-  <meta name="description" content="Página de contato e endereço da Loja" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
   <style>
     :root{
-      --bg:#f7f7f8;
-      --card:#ffffff;
-      --accent:#1f6feb;
-      --accent-700:#155ecb;
-      --muted:#667085;
-      --radius:14px;
+      --bg:#0c0c0c;
+      --card:#161616;
+      --card-border:#262626;
+      --accent:#0ea5e9;
+      --accent-glow:rgba(14,165,233,0.25);
+      --text:#f5f5f5;
+      --muted:#a3a3a3;
+      --radius:16px;
       --container-max:1100px;
-      --gap:18px;
-      --shadow:0 8px 30px rgba(15,15,15,0.08);
-      --brand-font-size:20px;
+      --gap:20px;
+      --shadow:0 8px 40px rgba(0,0,0,0.4);
     }
 
     *,*::before,*::after{box-sizing:border-box}
-
     html,body{height:100%}
     body{
-      font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
+      font-family:'Outfit', system-ui, -apple-system, sans-serif;
       margin:0;
       background:var(--bg);
-      color:#0f1724;
+      color:var(--text);
       -webkit-font-smoothing:antialiased;
-      -moz-osx-font-smoothing:grayscale;
-      line-height:1.45;
+      line-height:1.5;
     }
 
     .container{
       max-width:var(--container-max);
-      margin:28px auto;
-      padding:18px;
+      margin:0 auto;
+      padding:24px;
     }
 
     .card{
       background:var(--card);
+      border:1px solid var(--card-border);
       border-radius:var(--radius);
       box-shadow:var(--shadow);
       overflow:hidden;
@@ -57,257 +56,280 @@
       display:flex;
       align-items:center;
       gap:16px;
-      padding:18px 20px;
+      padding:20px 24px;
       flex-wrap:wrap;
+      border-bottom:1px solid var(--card-border);
     }
 
     .logo{
-      width:86px;
-      height:86px;
-      border-radius:10px;
+      width:72px;
+      height:72px;
+      border-radius:12px;
       overflow:hidden;
-      background:#f3f4f6;
+      background:linear-gradient(135deg,var(--accent),#38bdf8);
       display:flex;
       align-items:center;
       justify-content:center;
       flex:0 0 auto;
+      font-size:28px;
+      font-weight:800;
+      color:#fff;
+      text-shadow:0 2px 8px rgba(0,0,0,0.3);
     }
-
-    .logo img{width:100%;height:100%;object-fit:contain;display:block}
 
     .brand{flex:1 1 auto;min-width:0}
-    .brand h1{margin:0;font-size:var(--brand-font-size);font-weight:700;letter-spacing:-0.2px}
-    .brand p{margin:6px 0 0;color:var(--muted);font-size:14px}
+    .brand h1{margin:0;font-size:22px;font-weight:700;letter-spacing:-0.3px}
+    .brand p{margin:4px 0 0;color:var(--muted);font-size:14px}
 
     .actions{display:flex;gap:10px;align-items:center;flex:0 0 auto}
-    .actions .btn{white-space:nowrap}
 
     .hero{
-      height:460px;
+      height:420px;
       display:block;
       position:relative;
-      background:#e2e8f0;
       overflow:hidden;
     }
-    .hero img{width:100%;height:100%;object-fit:cover;display:block}
+    .hero img{width:100%;height:100%;object-fit:cover;display:block;filter:brightness(0.7)}
     .hero-overlay{
       position:absolute;
       inset:0;
       display:flex;
       align-items:flex-end;
-      padding:28px;
-      background:linear-gradient(180deg, rgba(0,0,0,0.0) 40%, rgba(0,0,0,0.28) 100%);
+      padding:32px;
+      background:linear-gradient(180deg, rgba(0,0,0,0) 30%, rgba(0,0,0,0.85) 100%);
     }
     .hero-card{
       color:#fff;
-      max-width:720px;
+      max-width:680px;
       width:100%;
-      display:flex;
-      flex-direction:column;
-      gap:10px;
     }
-    .hero-card h2{margin:0;font-size:28px;line-height:1.05;font-weight:800}
-    .hero-card p{margin:0;font-size:15px;opacity:0.95}
+    .hero-card h2{margin:0 0 12px;font-size:32px;line-height:1.1;font-weight:800;text-shadow:0 2px 12px rgba(0,0,0,0.5)}
+    .hero-card p{margin:0;font-size:15px;opacity:0.92;line-height:1.6}
 
     .content{
-      padding:22px;
+      padding:28px;
       display:grid;
-      grid-template-columns:1fr 340px;
+      grid-template-columns:1fr 360px;
       gap:var(--gap);
     }
 
-    .about h2{margin:0 0 10px;font-size:18px}
-    .address{background:#fbfdff;border-radius:12px;padding:14px;border:1px solid rgba(31,111,235,0.04)}
-    .address p{margin:6px 0;color:var(--muted);font-size:14px}
+    .about h2{margin:0 0 12px;font-size:18px;font-weight:600;color:var(--accent)}
+    .address{
+      background:rgba(14,165,233,0.05);
+      border-radius:12px;
+      padding:18px;
+      border:1px solid rgba(14,165,233,0.15);
+    }
+    .address strong{font-size:15px;color:var(--text)}
+    .address p{margin:8px 0;color:var(--muted);font-size:14px}
 
     .btn{
       display:inline-flex;
       align-items:center;
-      gap:10px;
-      padding:12px 16px;
-      border-radius:12px;
+      gap:8px;
+      padding:12px 20px;
+      border-radius:10px;
       text-decoration:none;
       background:var(--accent);
       color:#fff;
-      font-weight:700;
-      font-size:15px;
-      box-shadow:0 6px 18px rgba(31,111,235,0.16);
-      transition:background .16s ease, transform .08s ease;
+      font-weight:600;
+      font-size:14px;
+      box-shadow:0 4px 20px var(--accent-glow);
+      transition:all .2s ease;
     }
-    .btn:active{transform:translateY(1px)}
-    .btn.secondary{background:#eef2ff;color:var(--accent);font-weight:600;box-shadow:none;border:1px solid rgba(31,111,235,0.06)}
+    .btn:hover{transform:translateY(-2px);box-shadow:0 8px 30px var(--accent-glow)}
+    .btn:active{transform:translateY(0)}
+    .btn.secondary{
+      background:transparent;
+      color:var(--accent);
+      border:1px solid var(--accent);
+      box-shadow:none;
+    }
+    .btn.secondary:hover{background:rgba(14,165,233,0.1)}
 
-    .map{width:100%;height:260px;border-radius:10px;overflow:hidden;background:#eaeaea}
-    aside .map{height:220px}
+    .btn.whatsapp{background:#25d366;box-shadow:0 4px 20px rgba(37,211,102,0.25)}
+    .btn.whatsapp:hover{box-shadow:0 8px 30px rgba(37,211,102,0.35)}
+
+    .map{width:100%;height:200px;border-radius:12px;overflow:hidden;border:1px solid var(--card-border)}
+    .map iframe{border:0;width:100%;height:100%}
+
+    .services{
+      display:grid;
+      grid-template-columns:repeat(2,1fr);
+      gap:12px;
+      margin-top:16px;
+    }
+    .service-item{
+      background:rgba(255,255,255,0.03);
+      border:1px solid var(--card-border);
+      border-radius:10px;
+      padding:14px;
+      text-align:center;
+    }
+    .service-icon{
+      width:40px;
+      height:40px;
+      margin:0 auto 8px;
+      background:linear-gradient(135deg,var(--accent),#38bdf8);
+      border-radius:10px;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      font-size:18px;
+      font-weight:700;
+      color:#fff;
+    }
+    .service-item p{margin:0;font-size:13px;color:var(--muted)}
 
     footer{
-      padding:18px;
-      border-top:1px solid rgba(15,15,15,0.04);
+      padding:20px;
+      border-top:1px solid var(--card-border);
       text-align:center;
       color:var(--muted);
       font-size:13px;
     }
 
-    /* Desktop niceties */
-    @media (min-width:1000px){
-      .hero{height:520px}
-      .hero-card h2{font-size:34px}
+    .icon{
+      display:inline-block;
+      width:18px;
+      height:18px;
+      vertical-align:middle;
+      margin-right:6px;
     }
 
-    /* responsivo móvel */
+    @media (min-width:1000px){
+      .hero{height:480px}
+      .hero-card h2{font-size:38px}
+    }
+
     @media (max-width:860px){
-      .content{grid-template-columns:1fr; padding:16px}
-      .hero{height:320px}
-      .logo{width:64px;height:64px}
+      .content{grid-template-columns:1fr;padding:20px}
+      .hero{height:300px}
+      .logo{width:56px;height:56px;font-size:22px}
       .brand h1{font-size:18px}
-      header{padding:12px}
-      .actions{width:100%;justify-content:flex-end}
-      .hero-overlay{align-items:flex-end;padding:16px}
-      .hero-card h2{font-size:20px}
-      .actions .btn{padding:10px 12px;font-size:14px}
+      header{padding:16px}
+      .actions{width:100%;justify-content:center;margin-top:8px}
+      .hero-overlay{padding:20px}
+      .hero-card h2{font-size:22px}
+      .services{grid-template-columns:1fr 1fr}
     }
   </style>
-
 </head>
 
 <body>
-
   <main class="container">
-
     <section class="card">
 
       <header>
-        <div class="logo" id="logo-placeholder">
-          <!-- Substitua logo.png -->
-          <img src="logo.png" alt="Logo da loja" onerror="this.style.filter='grayscale(1)';this.alt='Logo não encontrado'" />
-        </div>
+        <div class="logo">GI</div>
 
         <div class="brand">
-          <h1 id="store-name">Nome da Loja</h1>
-          <p id="store-sub">Horário: Seg-Sex 09:00?18:00 · Contato: (00) 0000-0000</p>
+          <h1>GUSIMPORTS LTDA</h1>
+          <p>Assistencia Tecnica & Venda de Celulares - Campinas/SP</p>
         </div>
 
-        <div class="actions" aria-hidden="false">
-          <a class="btn secondary" href="tel:+550000000000" aria-label="Ligar para a loja">Ligar</a>
-          <a class="btn" href="#mapa" aria-label="Mostrar o mapa">Como chegar</a>
+        <div class="actions">
+          <a class="btn secondary" href="tel:+5519998043181">Ligar</a>
+          <a class="btn whatsapp" href="https://wa.me/5519998043181" target="_blank">WhatsApp</a>
         </div>
       </header>
 
-
-
-      <div class="hero" id="hero">
-        <!-- Substitua photo.jpg -->
-        <img src="photo.jpg" alt="Foto da loja" onerror="this.style.filter='grayscale(1)';this.alt='Foto não encontrada'" />
-        <div class="hero-overlay" aria-hidden="false">
-          <div class="hero-card" role="region" aria-label="Destaque da loja">
-            <h2 id="hero-title">Nome da Loja</h2>
-            <p id="hero-sub">A melhor loja da região ? atendimento humanizado, retirada e entrega rápida.</p>
-            <div style="margin-top:12px;display:flex;gap:12px;">
-              <a class="btn" href="#mapa">Ver no mapa</a>
-              <a class="btn secondary" href="mailto:contato@loja.com">Enviar e?mail</a>
+      <div class="hero">
+        <img src="https://images.unsplash.com/photo-1556656793-08538906a9f8?w=1600&q=80" alt="Assistencia tecnica de celulares" />
+        <div class="hero-overlay">
+          <div class="hero-card">
+            <h2>Assistencia Tecnica Especializada em Celulares</h2>
+            <p>Diagnostico preciso, pecas de qualidade e atendimento transparente. Sua confianca e nossa prioridade.</p>
+            <div style="margin-top:18px;display:flex;gap:12px;flex-wrap:wrap">
+              <a class="btn" href="#mapa">Como chegar</a>
+              <a class="btn secondary" href="mailto:Importsgus@gmail.com">Enviar e-mail</a>
             </div>
           </div>
         </div>
       </div>
 
-
-
       <div class="content">
-
         <div class="about">
 
-          <h2>Endereço</h2>
-
+          <h2>Endereco</h2>
           <div class="address">
-
-            <strong id="address-line">Rua Exemplo, 123 ? Bairro, Cidade - Estado</strong>
-
-            <p id="extra">Perto do ponto de referência. Atendimento presencial e retirada no local.</p>
-
-            <p style="margin-top:10px"><strong>Telefone:</strong> <span id="phone">(00) 0000-0000</span></p>
-
-            <p><strong>E-mail:</strong> <span id="email">contato@loja.com</span></p>
-
+            <strong>Rua Barata Ribeiro, 79 - Sala 1603</strong>
+            <p>Centro, Campinas - SP<br>CEP: 13015-097</p>
+            <p style="margin-top:12px"><strong>Telefone:</strong> (19) 99804-3181</p>
+            <p><strong>E-mail:</strong> Importsgus@gmail.com</p>
           </div>
 
+          <h2 style="margin-top:24px">Sobre Nos</h2>
+          <p style="color:var(--muted);font-size:15px;line-height:1.7">
+            Somos uma assistencia tecnica especializada em Campinas, oferecendo servicos profissionais de manutencao e reparo para aparelhos celulares de diversas marcas e modelos. Trabalhamos com diagnostico preciso, pecas de qualidade e atendimento transparente, garantindo seguranca e confianca aos nossos clientes.
+          </p>
+          <p style="color:var(--muted);font-size:15px;line-height:1.7;margin-top:12px">
+            Alem da assistencia tecnica, atuamos tambem na <strong style="color:var(--text)">venda de aparelhos celulares</strong>, sempre com procedencia garantida. Nosso compromisso e entregar solucoes eficientes, com rapidez e excelencia no atendimento.
+          </p>
 
+          <div class="services">
+            <div class="service-item">
+              <div class="service-icon">T</div>
+              <p>Reparo de Telas</p>
+            </div>
+            <div class="service-item">
+              <div class="service-icon">B</div>
+              <p>Troca de Bateria</p>
+            </div>
+            <div class="service-item">
+              <div class="service-icon">L</div>
+              <p>Danos por Liquido</p>
+            </div>
+            <div class="service-item">
+              <div class="service-icon">V</div>
+              <p>Venda de Celulares</p>
+            </div>
+          </div>
 
-          <h2 style="margin-top:18px">Sobre</h2>
-
-          <p id="desc">Breve descrição da loja ? o que vende, diferencial, tempo de mercado. Substitua este texto para falar rápido sobre a sua loja.</p>
-
-
-
-          <p style="margin-top:12px"><a class="btn" href="mailto:contato@loja.com">Enviar e?mail</a></p>
+          <p style="margin-top:20px;display:flex;gap:12px;flex-wrap:wrap">
+            <a class="btn whatsapp" href="https://wa.me/5519998043181" target="_blank">Fale pelo WhatsApp</a>
+            <a class="btn secondary" href="mailto:Importsgus@gmail.com">Enviar e-mail</a>
+          </p>
 
         </div>
 
-
-
         <aside>
-
-          <h2>Mapa</h2>
-
+          <h2 style="font-size:18px;font-weight:600;color:var(--accent);margin:0 0 12px">Localizacao</h2>
           <div id="mapa" class="map">
-
-            <!-- Se quiser usar Google Maps: cole iframe do Google Maps aqui -->
-
-            <iframe id="gmaps" src="https://www.google.com/maps?q=Rua+Exemplo+123&output=embed" style="border:0;width:100%;height:100%" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
+            <iframe 
+              src="https://www.google.com/maps?q=Rua+Barata+Ribeiro+79+Centro+Campinas+SP&output=embed" 
+              allowfullscreen="" 
+              loading="lazy" 
+              referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
           </div>
 
-
-
-          <div style="margin-top:12px">
-
-            <p style="margin:6px 0 8px"><strong>Redes</strong></p>
-
-            <p style="margin:0;color:var(--muted)">Instagram: @sualoja · WhatsApp: (00) 00000-0000</p>
-
+          <div style="margin-top:20px;padding:16px;background:rgba(255,255,255,0.03);border-radius:12px;border:1px solid var(--card-border)">
+            <p style="margin:0 0 8px;font-weight:600;font-size:14px">Redes Sociais</p>
+            <p style="margin:0;color:var(--muted);font-size:13px">
+              WhatsApp: (19) 99804-3181<br>
+              E-mail: Importsgus@gmail.com
+            </p>
           </div>
 
+          <div style="margin-top:16px;padding:16px;background:linear-gradient(135deg,rgba(14,165,233,0.1),rgba(56,189,248,0.05));border-radius:12px;border:1px solid rgba(14,165,233,0.2)">
+            <p style="margin:0 0 4px;font-weight:600;font-size:14px;color:var(--accent)">Atendimento Rapido</p>
+            <p style="margin:0;color:var(--muted);font-size:13px">
+              Diagnostico em ate 30 minutos. Orcamento sem compromisso!
+            </p>
+          </div>
         </aside>
-
       </div>
 
-
-
       <footer>
-
-        © <span id="year"></span> Nome da Loja ? Endereço completo ? Criado com página simples
-
+        &copy; <span id="year"></span> GUSIMPORTS LTDA - Rua Barata Ribeiro, 79 - Sala 1603, Centro - Campinas/SP
       </footer>
 
     </section>
-
   </main>
 
-
-
   <script>
-
-    // pequenas customizações via JS: atualize facilmente sem mexer no HTML
-
     document.getElementById('year').textContent = new Date().getFullYear();
-
-
-
-    // exemplo: se quiser trocar texto pelo querystring ?nome=Loja
-
-    const qs = new URLSearchParams(location.search);
-
-    if(qs.get('nome')) document.getElementById('store-name').textContent = qs.get('nome');
-
-    if(qs.get('end')) document.getElementById('address-line').textContent = qs.get('end');
-
-    if(qs.get('tel')) document.getElementById('phone').textContent = qs.get('tel');
-
-    if(qs.get('email')) document.getElementById('email').textContent = qs.get('email');
-
-    if(qs.get('desc')) document.getElementById('desc').textContent = qs.get('desc');
-
   </script>
-
 </body>
-
 </html>
